xgettext: Add support for gettext-like functions with wide string argument.
Reported by Érico Nogueira <ericonr@disroot.org> in
<https://lists.gnu.org/archive/html/bug-gettext/2020-11/msg00013.html>.

* gettext-tools/src/x-c.c (phase5_get): Recognize also the string-literal
prefixes 'u', 'U', 'L'. Consider all types of C++ raw strings as relevant.
* gettext-tools/tests/xgettext-c-5: Add more test cases.
* gettext-tools/tests/xgettext-c-c++-1: Likewise.
* NEWS: Mention it.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Version 0.21.1 - December 2020
+
+* Programming languages support:
+  - C, C++: xgettext now supports gettext-like functions that take wide strings
+    (of type 'const wchar_t *', 'const char16_t *', or 'const char32_t *') as
+    arguments.
+
 Version 0.21 - July 2020
 
 * Programming languages support:
